# FTCinsight

./: .gitattributes  .gitignore  README.md  pyrightconfig.json
api/: DOCS.md  README.md  pyproject.toml
api/statbotics/: __init__.py  main.py
backend/: .gitignore  main.py  package-lock.json  pyrightconfig.json  requirements.txt  run_data.py
backend/src/: constants.py
backend/src/data/: ftc_pipeline.py  main.py  router.py
backend/src/db/: main.py  sql_storage.py  storage.py
backend/src/db/functions/: clear_year.py  noteworthy_matches.py  remove_teams_no_events.py  upcoming_matches.py  update_teams.py
backend/src/db/models/: create.py  event.py  team_event.py
backend/src/db/read/: etag.py  event.py  match.py  team.py  team_event.py  team_match.py  team_year.py  year.py
backend/src/db/write/: template.py
backend/src/firebase/: __init__.py  config.py  storage.py
backend/src/ftc/: __init__.py  breakdown.py  constants.py  types.py
backend/src/ftc_api/: __init__.py  breakdown.py  constants.py  main.py  read_ftc.py  types.py  utils.py
backend/src/models/: template.py
backend/src/models/epa/: breakdown.py  main.py
backend/src/types/: enums.py
backend/src/utils/: utils.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: constants.tsx  utils.tsx
frontend/src/api/: firestore.tsx  storage.tsx
frontend/src/components/: columns.tsx
frontend/src/components/Figures/: Bubble.tsx  shared.tsx
frontend/src/firebase/: config.ts  queries.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pagesContent/: navbar.tsx
(+24 files in other folders)
