[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "ftcinsight"
version = "1.0.0"
description = "Modernizing FTC Data Analytics"
authors = ["FTC Insight Team"]
license = "MIT License"

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/your-repo/ftcinsight"
homepage = "https://ftcinsight.org"

keywords = ['FIRST', 'FTC', 'robotics', 'data', 'analysis', 'ranking']

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
cachecontrol = "^0.12.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
